kustomization/overlays/prod/forgejo-runners-privileged/networkpolicy/allow-connection-manager-and-job-executor-to-coredns.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-connection-manager-and-job-executor-to-coredns-networkpolicy
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/component
        operator: In
        values:
          - connection-manager
          - job-executor
  policyTypes:
    - Egress
